--- a/translations/kangyur/placeholders/083-025_toh477-the_tantra_of_the_secret_ornament_of_the_moon.xml
+++ b/translations/kangyur/placeholders/083-025_toh477-the_tantra_of_the_secret_ornament_of_the_moon.xml
@@ -10,7 +10,8 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal zla gsang thig le zhes bya ba rgyud kyi rgyal po chen po/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīcandraguhyatilaka­nāmamahātantrarāja</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-083-025"/>
             </publicationStmt>
             <sourceDesc>
@@ -24,9 +25,19 @@
                     <idno source-id="O1JC114941JC12189" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:34:39 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-083-025-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:31:18.304Z" type="translation-status" status="3" xml:id="UT22084-083-025-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:31:18.304Z" type="text-version" status="0.0.1" xml:id="UT22084-083-025-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
