--- a/translations/kangyur/placeholders/099-006_toh841-1-the_sap_of_the_five_amrtas_quintessence_of_great_accomplishment.xml
+++ b/translations/kangyur/placeholders/099-006_toh841-1-the_sap_of_the_five_amrtas_quintessence_of_great_accomplishment.xml
@@ -9,7 +9,8 @@
                 <title type="mainTitle" xml:lang="en">The Sap of the Five Amṛtas, Quintessence of Great Accomplishment</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">thams cad bdud rtsi lnga'i rang bzhin/ dngos grub chen po nye ba'i snying po mchog</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-099-006"/>
             </publicationStmt>
             <sourceDesc>
@@ -23,9 +24,19 @@
                     <idno source-id="O1JC114941JC12593" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:29:32 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-099-006-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:33:12.025Z" type="translation-status" status="3" xml:id="UT22084-099-006-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:33:12.025Z" type="text-version" status="0.0.1" xml:id="UT22084-099-006-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
