--- a/translations/kangyur/placeholders/099-007_toh841-2-homage_to_brahma_and_other_sages_deities_nagas_and_human_bodhisattvas.xml
+++ b/translations/kangyur/placeholders/099-007_toh841-2-homage_to_brahma_and_other_sages_deities_nagas_and_human_bodhisattvas.xml
@@ -10,7 +10,8 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">amṛtarasāyana/ tanajhaya/ praśasta­pramaṇaśrīkranapraśastaya­namo</title>
                 <title type="otherTitle" xml:lang="en">[This chapter and others appear to be named by their expressions of homage. See also their colophon titles.]</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-099-007"/>
             </publicationStmt>
             <sourceDesc>
@@ -24,9 +25,19 @@
                     <idno source-id="O1JC114941JC12594" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:29:34 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-099-007-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:34:02.6Z" type="translation-status" status="3" xml:id="UT22084-099-007-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:34:02.6Z" type="text-version" status="0.0.1" xml:id="UT22084-099-007-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
