--- a/translations/kangyur/placeholders/099-008_toh841-3-homage_to_the_blessed_one_the_great_king_of_nonduality.xml
+++ b/translations/kangyur/placeholders/099-008_toh841-3-homage_to_the_blessed_one_the_great_king_of_nonduality.xml
@@ -9,7 +9,8 @@
                 <title type="mainTitle" xml:lang="en">Homage to the Blessed One, the Great King of Non-Duality</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">prajñābhagavanmahārājā</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-099-008"/>
             </publicationStmt>
             <sourceDesc>
@@ -23,9 +24,19 @@
                     <idno source-id="O1JC114941JC12595" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:29:26 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-099-008-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:34:53.925Z" type="translation-status" status="3" xml:id="UT22084-099-008-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:34:53.925Z" type="text-version" status="0.0.1" xml:id="UT22084-099-008-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
