--- a/translations/kangyur/placeholders/099-010_toh841-5-homage_to_the_sugatas_of_the_five_families.xml
+++ b/translations/kangyur/placeholders/099-010_toh841-5-homage_to_the_sugatas_of_the_five_families.xml
@@ -8,7 +8,8 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">kulapañcabuddhaya namaḥ</title>
                 <title type="mainTitle" xml:lang="en">Homage to the Sugatas of the Five Families</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-099-010"/>
             </publicationStmt>
             <sourceDesc>
@@ -22,9 +23,19 @@
                     <idno source-id="O1JC114941JC12597" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:29:42 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-099-010-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:36:43.756Z" type="translation-status" status="3" xml:id="UT22084-099-010-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:36:43.756Z" type="text-version" status="0.0.1" xml:id="UT22084-099-010-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
