--- a/translations/kangyur/placeholders/099-011_toh841-6-homage_to_amrtakundali.xml
+++ b/translations/kangyur/placeholders/099-011_toh841-6-homage_to_amrtakundali.xml
@@ -8,7 +8,8 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">amṛtakuṇḍalyai namaḥ</title>
                 <title type="mainTitle" xml:lang="en">Homage to Amṛtakuṇḍalī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-099-011"/>
             </publicationStmt>
             <sourceDesc>
@@ -22,9 +23,19 @@
                     <idno source-id="O1JC114941JC12598" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:29:44 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-099-011-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:37:34.012Z" type="translation-status" status="3" xml:id="UT22084-099-011-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:37:34.012Z" type="text-version" status="0.0.1" xml:id="UT22084-099-011-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
