--- a/translations/kangyur/placeholders/034-011_toh23-the_perfection_of_wisdom_mother_in_one_syllable.xml
+++ b/translations/kangyur/placeholders/034-011_toh23-the_perfection_of_wisdom_mother_in_one_syllable.xml
@@ -12,7 +12,8 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">ekākṣarīmātānāma­sarvatathāgata­prajñāpāramitā</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">bhagavatīprajñāpāramitā­sarvatathāgata­mātaikākṣarīnāma</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-034-011"/>
             </publicationStmt>
             <sourceDesc>
@@ -26,9 +27,19 @@
                     <idno source-id="O1JC114941JC11542" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:28:32 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-034-011-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:48:27.043Z" type="translation-status" status="3" xml:id="UT22084-034-011-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:48:27.043Z" type="text-version" status="0.0.1" xml:id="UT22084-034-011-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
