--- a/translations/kangyur/placeholders/034-013_toh25,553-the_hundred_and_eight_names_of_the_perfection_of_wisdom.xml
+++ b/translations/kangyur/placeholders/034-013_toh25,553-the_hundred_and_eight_names_of_the_perfection_of_wisdom.xml
@@ -15,11 +15,12 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryaprajñāpāramitānāmāṣṭaśatakam</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-034-013"/>
                 <date/>
             </publicationStmt>
@@ -43,10 +44,21 @@
                     <idno source-id="O1JC114941JC12280" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2019-12-20T13:05:19.655Z" user="admin">20/12/2019 13:05:19</note>
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-034-013-1">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-034-013-2">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:50:18.442Z" type="translation-status" status="3" xml:id="UT22084-034-013-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:50:18.442Z" type="text-version" status="0.0.3" xml:id="UT22084-034-013-4">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
