--- a/translations/kangyur/placeholders/034-017_toh29-the_perfection_of_wisdom_for_vajrapani.xml
+++ b/translations/kangyur/placeholders/034-017_toh29-the_perfection_of_wisdom_for_vajrapani.xml
@@ -11,11 +11,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryaprajñāpāramitā­vajrapāṇi­mahāyānasūtra</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="4"/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-034-017"/>
                 <date/>
             </publicationStmt>
@@ -51,6 +51,12 @@
                     <desc>4</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-04T14:01:45.586Z" type="text-version" status="0.0.4" xml:id="UT22084-034-017-7">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:51:21.441Z" type="translation-status" status="3" xml:id="UT22084-034-017-8">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:51:21.441Z" type="text-version" status="0.0.5" xml:id="UT22084-034-017-9">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
