--- a/translations/kangyur/placeholders/034-018_toh30-the_perfection_of_wisdom_for_vajraketu.xml
+++ b/translations/kangyur/placeholders/034-018_toh30-the_perfection_of_wisdom_for_vajraketu.xml
@@ -11,10 +11,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryaprajñāpāramitā­vajraketu­mahāyānsūtra</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-034-018"/>
                 <date/>
             </publicationStmt>
@@ -29,9 +30,30 @@
                     <idno source-id="O1JC114941JC11549" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-11T13:29:28.015Z" user="admin">11/05/2023 13:29:28</note>    <note type="updated" update="translation-status" value="4" date-time="2023-01-20T13:12:14.583Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-01-20T13:12:14.583Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="" date-time="2023-05-11T13:29:23.748Z" user="line-tofte"/>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-05-11T13:29:23.748Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2023-01-20T13:12:14.583Z" type="translation-status" status="4" xml:id="UT22084-034-018-1">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-20T13:12:14.583Z" type="text-version" status="0.0.1" xml:id="UT22084-034-018-2">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:29:23.748Z" type="translation-status" status="" xml:id="UT22084-034-018-3">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:29:23.748Z" type="text-version" status="0.0.2" xml:id="UT22084-034-018-4">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-034-018-5">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:52:12.26Z" type="translation-status" status="3" xml:id="UT22084-034-018-6">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:52:12.26Z" type="text-version" status="0.0.4" xml:id="UT22084-034-018-7">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
