--- a/translations/kangyur/placeholders/064-003_toh233-the_chapter_from_the_great_cloud_sutra_on_the_great_playful_festival_of_the_oceanic_gathering_of_the_bodhisattvas_of_the_ten_directions.xml
+++ b/translations/kangyur/placeholders/064-003_toh233-the_chapter_from_the_great_cloud_sutra_on_the_great_playful_festival_of_the_oceanic_gathering_of_the_bodhisattvas_of_the_ten_directions.xml
@@ -11,14 +11,15 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamahāmeghasūtrād daśadigbodhisattva­samudrasaṃnipāta­mahotsavavikrīḍita­nāmaparivarta</title>
                 <title type="otherTitle" xml:lang="zh">大雲經</title>
                 <title type="otherTitle" xml:lang="zh">（大正藏：大方等無想經）</title>
-            <sponsor ref="sponsors.xml#sponsor-3">anonymous</sponsor>
+            <sponsor xml:id="UT22084-064-003-1">anonymous</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-064-003"/>
             </publicationStmt>
             <sourceDesc>
@@ -32,11 +33,21 @@
                     <idno source-id="O1JC114941JC11879" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2019-12-20T13:03:32.583Z" user="admin">20/12/2019 13:03:32</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-064-003-2">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-064-003-3">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:53:06.78Z" type="translation-status" status="3" xml:id="UT22084-064-003-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:53:06.78Z" type="text-version" status="0.0.3" xml:id="UT22084-064-003-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
