--- a/translations/kangyur/placeholders/066-001_toh243-the_sutra_of_the_king_of_the_true_dharma.xml
+++ b/translations/kangyur/placeholders/066-001_toh243-the_sutra_of_the_king_of_the_true_dharma.xml
@@ -11,10 +11,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">saddharmarājamahāyānasūtra</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2020</date>
+                <edition>v 0.0.8 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-066-001"/>
                 <date/>
             </publicationStmt>
@@ -29,15 +30,54 @@
                     <idno source-id="O1JC114941JC11893" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-02T14:49:44.553Z" user="admin">02/03/2023 14:49:44</note>
-    <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:47:14.727Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:47:14.727Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="translation-status" value="" date-time="2020-11-30T10:11:42.983Z" user="line-tofte"/>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-30T10:11:42.983Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="4" date-time="2021-10-08T09:06:19.282Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-10-08T09:06:19.282Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="" date-time="2022-03-08T09:49:35.462Z" user="line-tofte"/>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-03-08T09:49:35.462Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="4" date-time="2022-08-23T14:22:12.284Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-08-23T14:22:12.284Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="" date-time="2023-03-02T14:49:40.171Z" user="line-tofte"/>    <note type="updated" update="text-version" value="0.0.6" date-time="2023-03-02T14:49:40.171Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2020-10-02T13:47:14.727Z" type="translation-status" status="4" xml:id="UT22084-066-001-1">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2020-10-02T13:47:14.727Z" type="text-version" status="0.0.1" xml:id="UT22084-066-001-2">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2020-11-30T10:11:42.983Z" type="translation-status" status="" xml:id="UT22084-066-001-3">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2020-11-30T10:11:42.983Z" type="text-version" status="0.0.2" xml:id="UT22084-066-001-4">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-10-08T09:06:19.282Z" type="translation-status" status="4" xml:id="UT22084-066-001-5">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2021-10-08T09:06:19.282Z" type="text-version" status="0.0.3" xml:id="UT22084-066-001-6">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-03-08T09:49:35.462Z" type="translation-status" status="" xml:id="UT22084-066-001-7">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2022-03-08T09:49:35.462Z" type="text-version" status="0.0.4" xml:id="UT22084-066-001-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-08-23T14:22:12.284Z" type="translation-status" status="4" xml:id="UT22084-066-001-9">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2022-08-23T14:22:12.284Z" type="text-version" status="0.0.5" xml:id="UT22084-066-001-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-02T14:49:40.171Z" type="translation-status" status="" xml:id="UT22084-066-001-11">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2023-03-02T14:49:40.171Z" type="text-version" status="0.0.6" xml:id="UT22084-066-001-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.7" xml:id="UT22084-066-001-13">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:55:11.456Z" type="translation-status" status="3" xml:id="UT22084-066-001-14">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:55:11.456Z" type="text-version" status="0.0.8" xml:id="UT22084-066-001-15">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
