--- a/translations/kangyur/placeholders/071-006_toh292-the_great_sutra_on_the_best_banner.xml
+++ b/translations/kangyur/placeholders/071-006_toh292-the_great_sutra_on_the_best_banner.xml
@@ -11,11 +11,12 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">mdo chen po rgyal mtshan mchog ces bya ba</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.1 <date/>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-071-006"/>
             </publicationStmt>
             <sourceDesc>
@@ -29,9 +30,19 @@
                     <idno source-id="O1JC114941JC11958" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-12-26T18:16:06.376Z" user="admin">26/12/2021 18:16:06</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-071-006-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:57:08.851Z" type="translation-status" status="3" xml:id="UT22084-071-006-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:57:08.851Z" type="text-version" status="0.0.3" xml:id="UT22084-071-006-3">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
