--- a/translations/tengyur/placeholders/021-001_toh1420-srisamvarodayamahatantrarajapadmininamapanjika.xml
+++ b/translations/tengyur/placeholders/021-001_toh1420-srisamvarodayamahatantrarajapadmininamapanjika.xml
@@ -9,16 +9,17 @@
                 <title xml:lang="Sa-Ltn" type="mainTitle">Śrī­saṃvarodaya­mahātantra­rājasya­padminī­nāma­pañjikā</title>
                 <title xml:lang="en" type="mainTitle">A Commentary on the Difficult Points of the Arising of Śaṃvara, Great King of Tantras, called “Lotus Pond”</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT23703-021-001"/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh1420" type="text">
                     <ref>Toh 1420</ref>
                     <biblScope>ff. 1v-101v</biblScope>
-                    <author ref="eft:entity-17768" xml:lang="Sa-Ltn">Ratnarakṣitapāda</author>
-                    <author role="translatorTib" ref="eft:entity-17767" xml:lang="Sa-Ltn">Sarvajñāśrībhadra</author>
-                    <editor role="reviser" ref="eft:entity-17547" xml:lang="Bo-Ltn">bod kyi lo tsA ba dge slong blo brtan</editor>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-021-001-1">Ratnarakṣitapāda</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT23703-021-001-2">Sarvajñāśrībhadra</author>
+                    <editor role="reviser" xml:lang="Bo-Ltn" xml:id="UT23703-021-001-3">bod kyi lo tsA ba dge slong blo brtan</editor>
                     <location work="UT23703" count-pages="201">
                         <volume number="21" start-page="2" end-page="202"/>
                     </location>
@@ -27,10 +28,21 @@
                 </bibl>
                 <link type="isCommentaryOf" target="toh373"/>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 10:11:14 by admin</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1401-1424_PH_new_v2.3.xml" date-time="2021-11-02T13:18:33.485Z" user="admin"/>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2021-11-02T13:18:33.485Z" type="import" xml:id="UT23703-021-001-4" source="tengyur-data-1401-1424_PH_new_v2.3.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT23703-021-001-5">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:29:34.564Z" type="translation-status" status="3" xml:id="UT23703-021-001-6">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T13:29:34.564Z" type="text-version" status="0.0.1" xml:id="UT23703-021-001-7">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
