--- a/translations/kangyur/placeholders/034-008_toh20,491-the_twentyfive_entrances_to_the_perfection_of_wisdom.xml
+++ b/translations/kangyur/placeholders/034-008_toh20,491-the_twentyfive_entrances_to_the_perfection_of_wisdom.xml
@@ -4,15 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">sher phyin sgo nyi shu rtsa lnga pa/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">pañcaviṃśatikāprajñāpāramitāmukha</title>
                 <title type="mainTitle" xml:lang="en">The Twenty-five Entrances to the Perfection of Wisdom</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa shes rab kyi pha rol tu phyin pa'i sgo nyi shu rtsa lnga pa zhes bya ba theg pa chen po'i mdo</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryapañcaviṃśatikā­prajñāpāramitāmukha­nāmamahāyānasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">pañcaviṃśatikāprajñāpāramitāmukha</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">sher phyin sgo nyi shu rtsa lnga pa/</title>
                 <title type="otherTitle" xml:lang="en">The Twenty-Five Entrances to the Perfection of Wisdom</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">pañcaviṃśatikāprajñā­pāramitāmukhasūtra</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa shes rab kyi pha rol tu phyin pa'i sgo nyi shu rtsa lnga pa zhes bya ba theg pa chen po'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryapañcaviṃśatikāprajñā­pāramitāmukha­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">pañcaviṃśatikāprajñā­pāramitāmukhasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">āryapañcaviṃśatikā­prajñāpāramitāmukha­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa shes rab kyi pha rol tu phyin pa'i sgo nyi shu rtsa lnga pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa shes rab kyi pha rol tu phyin pa'i sgo nyi shu rtsa lnga pa zhes bya ba theg pa chen po'i mdo/</title>
+                <author role="translatorMain" xml:id="UT22084-034-008-4">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT22084-034-008-5">Catherine Dalton</author>
             </titleStmt>
             <publicationStmt>
                 <availability status="3"/>
@@ -48,6 +50,12 @@
                     <desc>3</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-03T13:43:56.118Z" type="text-version" status="0.0.1" xml:id="UT22084-034-008-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:44:26.552Z" type="text-version" status="0.0.1" xml:id="UT22084-034-008-6">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-09T09:27:04.986Z" type="text-version" status="0.0.1" xml:id="UT22084-034-008-7">
                     <desc>User set version to 0.0.1</desc>
                 </change>
             </revisionDesc>
