--- a/translations/kangyur/placeholders/093-008_toh693,899-the_incantation_of_the_eleven_faced_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-008_toh693,899-the_incantation_of_the_eleven_faced_avalokitesvara.xml
@@ -4,14 +4,14 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">spyan ras gzigs zhal bcu gcig pa'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">avalokiteśvaraikādaśamukhadhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of the Eleven Faced Avalokiteśvara</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa spyan ras gzigs dbang phyug zhal bcu gcig pa zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryāvalokiteśvaraikādaśa­mukha­nāmadhāraṇī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">avalokiteśvaraikādaśamukhadhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">spyan ras gzigs zhal bcu gcig pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī of the Eleven-Faced Avalokiteśvara</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa spyan ras gzigs dbang phyug zhal bcu gcig pa zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryāvalokiteśvaraikādaśa­mukha­nāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa spyan ras gzigs dbang phyug zhal bcu gcig pa zhes bya ba'i gzungs/</title>
+                <author role="translatorMain" xml:id="UT22084-093-008-4">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT22084-093-008-5">Catherine Dalton</author>
             </titleStmt>
             <publicationStmt>
                 <availability status="3"/>
@@ -47,6 +47,12 @@
                     <desc>3</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-03T14:10:11.256Z" type="text-version" status="0.0.1" xml:id="UT22084-093-008-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:10:41.273Z" type="text-version" status="0.0.1" xml:id="UT22084-093-008-6">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-09T09:29:43.685Z" type="text-version" status="0.0.1" xml:id="UT22084-093-008-7">
                     <desc>User set version to 0.0.1</desc>
                 </change>
             </revisionDesc>
